# vsag

./: .clang-tidy  .gitignore  CMakeLists.txt  DEVELOPMENT.md  Makefile  README.md  perf.sh  pyproject.toml  pyvsag-0.1.0.dev664-cp36-cp36m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl:Zone.Identifier
.github/: build-index.yml  fp32.yml  ivf-pq.yml  perf-bf16.yml  perf-fp16.yml  perf-fp32.yml  perf-mini-sift-bf16.yml  perf-mini-sift-fp16.yml  perf-mini-sift-fp32.yml  perf-mini-sift-pq.yml  perf-mini-sift-pqfs.yml  perf-mini-sift-rabitq.yml  perf-mini-sift-sq4.yml  perf-mini-sift-sq4_uniform.yml  perf-mini-sift-sq8.yml  perf-mini-sift-sq8_uniform.yml  perf-mini.yml  perf-pq.yml  perf-rabitq.yml  perf-sq4.yml  perf-sq4_uniform.yml  perf-sq8.yml  perf-sq8_uniform.yml  pq.yml  pqfs.yml  rabitq.yml  sq8.yml  sq8_uniform.yml
.github/workflows/: asan_build_and_test.yml  asan_with_simd_option.yml  build_0.17.2.yml  build_0.18.5.yml  build_release_wheel.yml  build_wheels.yml  check_compatibility.yml  daily_test.yml  neon_test.yml  perf_fp32.yml  perf_sve.yml  performance-arm-generic-bf16.yml  performance-arm-generic-fp16.yml  performance-arm-generic-fp32.yml  performance-arm-generic-pq.yml  performance-arm-generic-rabitq.yml  performance-arm-generic-sq4.yml  performance-arm-generic-sq4_uniform.yml  performance-arm-generic-sq8.yml  performance-arm-generic-sq8_uniform.yml  performance-arm-generic.yml  performance-arm-neon.yml  performance-arm.yml  performance-rabitq-compressed.yml  performance-x86-bf16.yml  performance-x86-fp16.yml  performance-x86-fp32.yml  performance-x86-pq.yml  performance-x86-rabitq.yml  performance-x86-sq4.yml  performance-x86-sq4_uniform.yml  performance-x86-sq8.yml  performance-x86-sq8_uniform.yml  performance-x86.yml  pr-ci.yml  python_build_and_test.yml  release.yml  simd_arm_test.yml  simd_arm_tests.yml  sq4_simd_benchmark.yml  (+7 more)
benchs/datasets/: hgraph-rabitq-compressed-90.yml  sift-90.yml
benchs/indexes/: hgraph-90.yml  hgraph-95.yml  hgraph-99.yml
cmake/: CheckSIMDCompilerFlag.cmake  DarwinDep.cmake  VSAGCompilerConfig.cmake  VSAGDependencyTargets.cmake  VSAGHelpers.cmake  VSAGNodeBindings.cmake  VSAGOptions.cmake  VSAGPythonBindings.cmake
docker/: Dockerfile.arm64
docs/: README.md  autotune_api_v1_zh.md  autotune_framework_design_zh.md  hgraph.md
examples/cpp/: 106_index_ivf.cpp  107_index_pyramid.cpp  112_index_pyramid_multi_hierarchy.cpp  325_feature_compare_hgraph_pyramid_memory.cpp  326_feature_ivf_precise_bucket.cpp  CMakeLists.txt  README.md
examples/python/: 303_feature_remove.py  example_hnsw.py
include/vsag/: autotune.h  constants.h  readerset.h
python/: MANIFEST.in  pyproject.toml  setup.cfg  setup.py
python/pyvsag/: __init__.py  _version.py
python_bindings/: binding.cpp
scripts/: build_cpp_for_cibw.sh  build_pyvsag_multiple_version_arm64.sh  check_compatibility.sh  check_environment.sh  download_compatibility_assets.sh  local_build_wheel.sh
scripts/linters/: run-clang-tidy-15.sh
scripts/python/: build_cpp_for_cibw.sh  generate_version_file.py  local_build_wheel.sh  prepare_python_build.sh  repair_wheel_for_auditwheel.py  run_example_scripts.sh  stage_release_tree.sh
scripts/release/: dist.sh
scripts/testing/: test_parallel_bg.sh  test_parallel_by_name.sh
src/: CMakeLists.txt  constants.cpp  dataset_impl.cpp  dataset_impl.h  dataset_impl_test.cpp  inner_string_params.h  json_wrapper.cpp  json_wrapper.h  json_wrapper_test.cpp  omp.h  typing.h
src/algorithm/: brute_force.cpp  hgraph.cpp  hgraph.h  hgraph_parameter.cpp  hgraph_parameter.h  hgraph_parameter_test.cpp  inner_index_interface.cpp  inner_index_interface_test.cpp  inner_index_parameter_test.cpp  ivf.cpp  pyramid.cpp  pyramid.h  pyramid_store.cpp  pyramid_store.h  sparse_index.cpp
src/analyzer/: hgraph_analyzer.cpp  pyramid_analyzer.cpp  pyramid_analyzer.h
src/data_cell/: flatten_interface.cpp
src/datacell/: code_slot_map.cpp  code_slot_map.h  code_slot_map_test.cpp  dense_duplicate_tracker.cpp  dense_duplicate_tracker.h  dense_duplicate_tracker_test.cpp  duplicate_interface.h  extra_info_datacell.h  flatten_datacell.h  flatten_interface.h  graph_datacell.h  graph_interface.h  multi_vector_datacell.h  multi_vector_datacell.inl  multi_vector_datacell_test.cpp  sparse_duplicate_tracker.cpp  sparse_duplicate_tracker.h  sparse_duplicate_tracker_test.cpp  sparse_term_datacell.cpp  sparse_term_datacell_test.cpp  sparse_vector_datacell.h  sparse_vector_datacell.inl  sparse_vector_datacell_test.cpp
src/factory/: engine.cpp  factory.cpp
src/impl/: CMakeLists.txt  inner_search_param.h  label_table.cpp  label_table.h  label_table_test.cpp
src/index/: hnsw.cpp  hnsw_test.cpp  hnsw_zparameters.cpp  hnsw_zparameters.h  hnsw_zparameters_test.cpp
src/io/: async_io.cpp  async_io.h  buffer_io.cpp  io_parameter.cpp  memory_block_io.cpp
src/quantization/: fp32_quantizer_parameter.cpp  fp32_quantizer_parameter_test.cpp  quantizer_headers.h  quantizer_test.h
src/simd/: CMakeLists.txt  avx.cpp  avx2.cpp  avx512.cpp  basic_func.cpp  basic_func.h  basic_func_test.cpp  bf16_simd_test.cpp  generic.cpp  (+17 more)
tests/: CMakeLists.txt  test_diskann.cpp  test_hgraph.cpp  test_hgraph_dedup_search_control.cpp  test_index.cpp  test_index_old.cpp  test_ivf.cpp  test_main.cpp  test_pyramid.cpp  test_regression.cpp
tests/fixtures/: fixtures.cpp  fixtures.h
tests/fixtures/core/: common.cpp
tests/fixtures/framework/: test_reader.cpp  test_reader.h
tools/: CMakeLists.txt  README.md
tools/autotune/: CMakeLists.txt  README.md  README_zh.md  autotune.cpp  autotune.h  autotune_candidate.cpp  autotune_candidate.h  autotune_candidate_generator.cpp  autotune_candidate_generator.h  autotune_common.cpp  autotune_constraints.cpp  autotune_constraints.h  autotune_environment.cpp  autotune_environment.h  autotune_evaluation.cpp  autotune_internal.h  autotune_planner.cpp  autotune_planner.h  autotune_public_api_test.cpp  autotune_request.cpp  autotune_request.h  autotune_result.cpp  autotune_test.cpp  autotune_types.h  main.cpp
tools/autotune/examples/: sift_hgraph_autotune_request.json
(+120 files in other folders)
