[build-system]
requires = ["setuptools>=44,<61", "setuptools_scm[toml]>=6.2,<7.0", "pep440"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvsag"
description = "vsag is a vector indexing library used for similarity search"
authors = [
    {name = "the vsag project", email = "the.vsag.project@gmail.com"},
]
license = {text = "Apache-2.0"}
keywords = ["search", "nearest", "neighbors"]
requires-python = ">=3.6"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "packaging",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/antgroup/vsag"

[tool.setuptools]
packages = ["pyvsag"]
package-data = { "pyvsag" = ["_pyvsag*.so"] }
zip-safe = false

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"
write_to = "python/pyvsag/_version.py"
root = ".."

[tool.cibuildwheel]
skip = ["*-musllinux*", "*i686*", "pp*"]
""

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"