[build-system]
requires = [
    "setuptools<60; python_version == '3.6'",
    "setuptools>=61,<68; python_version == '3.7'",
    "setuptools>=68; python_version >= '3.8'",
    "setuptools_scm",
    "wheel",
    "pep440",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyvsag"
description = "vsag is a vector indexing library used for similarity search"
authors = [
    { name = "the vsag project", email = "the.vsag.project@gmail.com" },
]
license = { text = "Apache-2.0" }
urls = { Homepage = "https://github.com/antgroup/vsag" }
keywords = ["search", "nearest", "neighbors"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.6"
dependencies = ["packaging"]
dynamic = ["version", "readme"]

[tool.setuptools]
packages = ["pyvsag"]
include-package-data = true

[tool.setuptools.package-data]
pyvsag = [
    "_pyvsag*.so",
    "libvsag*.so*",
    "libvsag*.dylib",
    "*vsag*.dll",
    "_version.py",
]

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"
fallback_version = "0.0.0"

[tool.cibuildwheel]
skip = ["*-musllinux*", "*i686*", "pp*"]
before-build = '''
                bash scripts/deps/install_deps_centos.sh 
              '''
test-command = "pip install numpy pytest && python /project/tests/python/run_test.py"
before-all = '''
    sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-*.repo
    sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*.repo
    if [[ "$(uname -m)" == "aarch64" ]]; then
      rm -f /etc/yum.repos.d/CentOS-SCLo-*.repo
    fi
    yum clean all
    yum install -y gcc gcc-c++ gcc-gfortran python3-devel
    yum install -y libaio-devel libcurl-devel ca-certificates
    yum install -y libgomp
'''

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
